@@ -168,7 +168,7 @@ if (obj_caller && obj_caller.time_comp)
 </table>
 <script type="text/javascript">
 <!--
-autoiframe_setsize(220, document.getElementById('table').offsetHeight + 10);
+autoiframe_setsize('autoiframe', 220, document.getElementById('table').offsetHeight + 10);
 //-->
 </script>
 </body>
