@@ -43,7 +43,7 @@
 <SCRIPT type="text/javascript">
 <!--
 var table = document.getElementById('table');
-autoiframe_setsize(table.offsetWidth, table.offsetHeight);
+autoiframe_setsize('autoiframe', table.offsetWidth, table.offsetHeight);
 //-->
 </SCRIPT>
 </BODY>
