@@ -15,7 +15,7 @@
 <script type="text/javascript">
 <!--
 var content = document.getElementById('content');
-autoiframe_setsize(content.offsetWidth, content.offsetHeight);
+autoiframe_setsize('autoiframe', content.offsetWidth, content.offsetHeight);
 //-->
 </script>
 </body>
