@@ -27,17 +27,16 @@
 <script type="text/javascript" language="Javascript" src="img/map.js"></script>
 <script type="text/javascript" language="JavaScript">
 <!--
-	var map;
-
 	var devices = [];
 	{if $devices}
 		{foreach from=$devices item=device}
 			devices.push({
-				lon: {$device.longitude},
-				lat: {$device.latitude},
+				lon: {$device.lon},
+				lat: {$device.lat},
 				state: {$device.state},
 				name: "{$device.name}",
 				ipaddr: "{$device.ipaddr}",
+				nodeid: "{$device.nodeid}",
 				id: {$device.id},
 				type: "netdevinfo"
 			});
@@ -61,8 +60,8 @@
 	{if $nodes}
 		{foreach from=$nodes item=node}
 			nodes.push({
-				lon: {$node.longitude},
-				lat: {$node.latitude},
+				lon: {$node.lon},
+				lat: {$node.lat},
 				state: {$node.state},
 				name: "{$node.name}",
 				ipaddr: "{$node.ipaddr}",
@@ -86,6 +85,9 @@
 	{/if}
 
 	map = createMap(devices, devlinks, nodes, nodelinks, true);
+
+	set_lastonline_limit({$_config.phpui.lastonline_limit});
+	setTimeout("netdevmap_refresh()", lastonline_limit * 1000);
 //-->
 </script>
 {elseif $gd} {* default if $type is not set or not 'flash' *}
