@@ -40,7 +40,7 @@
 <SCRIPT TYPE="text/javascript">
 <!--
 var table = document.getElementById('table');
-autoiframe_setsize(table.offsetWidth, table.offsetHeight);
+autoiframe_setsize('autoiframe', table.offsetWidth, table.offsetHeight);
 //-->
 </SCRIPT>
 </BODY>
