@@ -47,7 +47,7 @@
 			<IMG SRC="img/ip.gif" ALT="{t}IP address:{/t}">
 		</TD>
 		<TD WIDTH="99%" COLSPAN="2">
-			{$nodeinfo.ip}
+			<a href="javascript:ping_popup({$nodeinfo.id})">{$nodeinfo.ip}</a>
 		</TD>
 	</TR>
 	{if $nodeinfo.ip_pub != "0.0.0.0"}
