@@ -57,7 +57,7 @@
 </TABLE>
 <SCRIPT TYPE="text/javascript">
 var table = document.getElementById('table');
-autoiframe_setsize(table.offsetWidth, table.offsetHeight);
+autoiframe_setsize('autoiframe', table.offsetWidth, table.offsetHeight);
 </SCRIPT>
 </BODY>
 </HTML>
