@@ -1,0 +1,48 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!--// $Id$ //-->
+<html><head>
+<meta name="GENERATOR" content="LMS {$layout.lmsv}">
+<meta http-equiv="Content-Language" content="{$LANGDEFS.$_ui_language.html}">
+<meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_ui_language.html}">
+<title>::: LMS :{if $layout.pagetitle neq ""} {$layout.pagetitle} :{/if}::</title>
+<link href="img/style.css" rel="stylesheet" type="text/css">
+{$xajax}
+</head>
+{if !$part}
+<frameset name="all" frameborder="0" framespacing="0" ROWS="*">
+	<frame scrolling="always" frameborder="0" marginheight="0" marginwidth="0" name="m" noresize src="?m=ping&p=main&id={$nodeid}">
+</frameset>
+{else}
+<script type="text/javascript" src="img/common.js"></script>
+<script type="text/javascript">
+<!--
+	function ping_refresh()
+	{
+		elem = document.getElementById('data');
+		if (elem && document.getElementById('autoscroll').checked)
+			elem.scrollTop += 1000;
+		xajax_refresh(xajax.getFormValues('params'));
+		setTimeout("ping_refresh()", 1000);
+	}
+
+	setTimeout("ping_refresh()", 1000);
+//-->
+</script>
+<body>
+	<div id="data" style="overflow:auto;height:270px"></div>
+	<div id="wrapper" style="position:relative">
+		<div id="summary" style="position:absolute;left:0;top:5px;width:220px"><b>{t a="0" b="0" c="0"}Total: $a% ($b/$c){/t}</b></div>
+		<div id="onright" style="position:absolute;right:0;top:5px;width:180px" nowrap>
+		<form id="params">
+			<input type="hidden" name="ipaddr" value="{$ipaddr}">
+			<input type="hidden" id="transmitted" name="transmitted" value="0">
+			<input type="hidden" id="received" name="received" value="0">
+			<input type="hidden" id="minimum" name="minimum" value="1000.0">
+			<input type="hidden" id="maximum" name="maximum" value="0.0">
+			<input type="checkbox" id="autoscroll" name="autoscroll" checked><a href="javascript:checkElement('autoscroll');">{t}Auto Scroll{/t}</a>
+		</form>
+		</div>
+	</div>
+</body>
+{/if}
+</html>
