@@ -69,7 +69,7 @@
 <SCRIPT TYPE="text/javascript">
 <!--
 var table = document.getElementById('table');
-autoiframe_setsize(table.offsetWidth < 450 ? table.offsetWidth : 450, table.offsetHeight);
+autoiframe_setsize('autoiframe', table.offsetWidth < 450 ? table.offsetWidth : 450, table.offsetHeight);
 //-->
 </SCRIPT>
 </BODY>
