@@ -30,7 +30,7 @@
 </div>
 <SCRIPT TYPE="text/javascript">
 var table = document.getElementById('table');
-autoiframe_setsize(table.offsetWidth, table.offsetHeight);
+autoiframe_setsize('autoiframe', table.offsetWidth, table.offsetHeight);
 </SCRIPT>
 </body>
 </html>
